<resources>
    <string name="app_name">GithubSecSub</string>
    <string name="username">Username</string>
    <string name="type">Type</string>
    <string name="search_here">Search Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="imageerror">Image Error</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="image_view">Image View</string>
</resources>